# mute-status-overlay

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_SETUP.md  INSTALL_SIMPLE.md  LICENSE  Makefile  README.md  mute_status_overlay.cpp  package.ini
.github/: pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml
docs/: index.html
plugin_package/: package.ini
